# clrps

./: .gitignore  CMakeLists.txt  README.md  clrps_kernel.cl  fragment_shader.glsl  main.cpp  utils.cpp  utils.hpp  vertex_shader.glsl
