cmake_minimum_required (VERSION 2.8)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
project(clgol)
add_executable(clgol main.cpp utils.cpp)
find_package(GLFW REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
set(INCLUDES ${INCLUDES} "/opt/AMDAPP/include/")
set(INCLUDES ${INCLUDES} ${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS} ${OpenGL_INCLUDE_DIRS})
set(LIBS ${LIBS} ${OpenGL_LIBRARIES} ${GLEW_LIBRARY} ${GLFW_LIBRARIES} "OpenCL")
include_directories(${INCLUDES})
target_link_libraries(clgol ${LIBS})
